--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x22c0200d2f0>"
+       "<torch._C.Generator at 0x2f30684d2f0>"
       ]
      },
      "execution_count": 1,
@@ -185,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████| 1000/1000 [01:34<00:00, 10.55it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:40<00:00,  9.99it/s]\n"
      ]
     },
     {
@@ -194,13 +194,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    200.432000          3.835546      0.094143\n",
-      "std      78.224654          5.574005      0.044760\n",
-      "min      36.000000          0.000000      0.058437\n",
-      "25%     149.000000          0.000000      0.075689\n",
-      "50%     190.000000          0.000000      0.077466\n",
-      "75%     247.000000          8.126751      0.092652\n",
-      "max     511.000000         25.352531      0.359259\n"
+      "mean    200.432000          3.835546      0.099379\n",
+      "std      78.224654          5.574005      0.046939\n",
+      "min      36.000000          0.000000      0.060060\n",
+      "25%     149.000000          0.000000      0.076378\n",
+      "50%     190.000000          0.000000      0.078014\n",
+      "75%     247.000000          8.126751      0.097133\n",
+      "max     511.000000         25.352531      0.453674\n"
      ]
     }
    ],
@@ -258,7 +258,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████| 1000/1000 [02:15<00:00,  7.40it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:28<00:00,  6.72it/s]\n"
      ]
     },
     {
@@ -267,13 +267,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.00000       1000.000000   1000.000000\n",
-      "mean    179.96800         28.608444      0.134227\n",
-      "std      76.37923          7.851483      0.057089\n",
-      "min      26.00000         10.634741      0.059069\n",
-      "25%     130.00000         21.912093      0.107536\n",
-      "50%     170.00000         27.912093      0.124383\n",
-      "75%     222.00000         33.912093      0.144892\n",
-      "max     471.00000         53.912093      0.684378\n"
+      "mean    179.96800         28.608444      0.147905\n",
+      "std      76.37923          7.851483      0.066855\n",
+      "min      26.00000         10.634741      0.060907\n",
+      "25%     130.00000         21.912093      0.109011\n",
+      "50%     170.00000         27.912093      0.138953\n",
+      "75%     222.00000         33.912093      0.168935\n",
+      "max     471.00000         53.912093      0.791662\n"
      ]
     }
    ],
@@ -937,7 +937,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "a1efad3d-dd09-4aef-81dd-3ed3c31ffb31",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1200,7 +1202,7 @@
    "id": "8f140ecf-274f-4dcb-b26e-e76c46ca53e7",
    "metadata": {},
    "source": [
-    "### Learnin to Feasibility Pump"
+    "### Learning to Feasibility Pump"
    ]
   },
   {
@@ -1259,7 +1261,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "57c24ef8-218a-40f0-a448-f0b38851c3f9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1403,7 +1407,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "917856c4-f7db-4537-a59c-1499d0d27557",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
