--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2f30684d2f0>"
+       "<torch._C.Generator at 0x15fc0d69310>"
       ]
      },
      "execution_count": 1,
@@ -185,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:40<00:00,  9.99it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:25<00:00, 11.69it/s]\n"
      ]
     },
     {
@@ -194,29 +194,172 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    200.432000          3.835546      0.099379\n",
-      "std      78.224654          5.574005      0.046939\n",
-      "min      36.000000          0.000000      0.060060\n",
-      "25%     149.000000          0.000000      0.076378\n",
-      "50%     190.000000          0.000000      0.078014\n",
-      "75%     247.000000          8.126751      0.097133\n",
-      "max     511.000000         25.352531      0.453674\n"
+      "mean    200.432000          3.835546      0.084875\n",
+      "std      78.224654          5.574005      0.033661\n",
+      "min      36.000000          0.000000      0.058178\n",
+      "25%     149.000000          0.000000      0.073848\n",
+      "50%     190.000000          0.000000      0.075489\n",
+      "75%     247.000000          8.126751      0.077108\n",
+      "max     511.000000         25.352531      0.226458\n"
      ]
     }
    ],
    "source": [
-    "objvals, conviols, elapseds = [], [], []\n",
+    "sols, objvals, conviols, elapseds = [], [], [], []\n",
     "for p in tqdm(p_test):\n",
     "    model.setParamValue(*p)\n",
     "    tick = time.time()\n",
     "    xval, objval = model.solve(\"scip\")\n",
     "    tock = time.time()\n",
+    "    sols.append(list(xval.values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model.calViolation()))\n",
     "    elapseds.append(tock - tick)\n",
-    "df = pd.DataFrame({\"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
     "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9ef5a5b1-15c8-477a-9cf0-9c12b29f1d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sol</th>\n",
+       "      <th>Obj Val</th>\n",
+       "      <th>Constraints Viol</th>\n",
+       "      <th>Elapsed Time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[-1.0, 8.0, -1.0, 8.0, 2.0]</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.226458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[-3.0, 7.0, 0.0, 8.0, 1.0]</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.075828</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[-6.0, 8.0, 1.0, 10.0, 4.0]</td>\n",
+       "      <td>217.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.075393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[-2.0, 12.0, 1.0, 9.0, 6.0]</td>\n",
+       "      <td>266.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.075831</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[-3.0, 7.0, -3.0, 8.0, -1.0]</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.076019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>[-6.0, 11.0, -2.0, 13.0, 3.0]</td>\n",
+       "      <td>339.0</td>\n",
+       "      <td>17.149001</td>\n",
+       "      <td>0.089267</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.075917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>5.488008</td>\n",
+       "      <td>0.061418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>9.041870</td>\n",
+       "      <td>0.061603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>4.928075</td>\n",
+       "      <td>0.061317</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Sol  Obj Val  Constraints Viol  Elapsed Time\n",
+       "0      [-1.0, 8.0, -1.0, 8.0, 2.0]    134.0          0.000000      0.226458\n",
+       "1       [-3.0, 7.0, 0.0, 8.0, 1.0]    123.0          0.000000      0.075828\n",
+       "2      [-6.0, 8.0, 1.0, 10.0, 4.0]    217.0          0.000000      0.075393\n",
+       "3      [-2.0, 12.0, 1.0, 9.0, 6.0]    266.0          0.000000      0.075831\n",
+       "4     [-3.0, 7.0, -3.0, 8.0, -1.0]    132.0          0.000000      0.076019\n",
+       "..                             ...      ...               ...           ...\n",
+       "995  [-6.0, 11.0, -2.0, 13.0, 3.0]    339.0         17.149001      0.089267\n",
+       "996    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          0.000000      0.075917\n",
+       "997    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          5.488008      0.061418\n",
+       "998    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          9.041870      0.061603\n",
+       "999    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          4.928075      0.061317\n",
+       "\n",
+       "[1000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -229,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "987f3b11-c41c-4012-b2ef-935f62099616",
    "metadata": {},
    "outputs": [],
@@ -239,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "161556c9-67af-4686-bfec-d0fdea488bad",
    "metadata": {},
    "outputs": [],
@@ -250,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f0a6d751-9afa-4b4c-abbb-1b2c9ba6ad08",
    "metadata": {},
    "outputs": [
@@ -258,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:28<00:00,  6.72it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:59<00:00,  8.38it/s]\n"
      ]
     },
     {
@@ -267,13 +410,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.00000       1000.000000   1000.000000\n",
-      "mean    179.96800         28.608444      0.147905\n",
-      "std      76.37923          7.851483      0.066855\n",
-      "min      26.00000         10.634741      0.060907\n",
-      "25%     130.00000         21.912093      0.109011\n",
-      "50%     170.00000         27.912093      0.138953\n",
-      "75%     222.00000         33.912093      0.168935\n",
-      "max     471.00000         53.912093      0.791662\n"
+      "mean    179.96800         28.608444      0.118482\n",
+      "std      76.37923          7.851483      0.042934\n",
+      "min      26.00000         10.634741      0.057399\n",
+      "25%     130.00000         21.912093      0.089160\n",
+      "50%     170.00000         27.912093      0.120978\n",
+      "75%     222.00000         33.912093      0.134076\n",
+      "max     471.00000         53.912093      0.258577\n"
      ]
     }
    ],
@@ -286,7 +429,7 @@
     "    naive_round(xval_init, model)\n",
     "    tock = time.time()\n",
     "    xval, objval = model.getVal()\n",
-    "    sols.append(xval.values())\n",
+    "    sols.append(list(xval.values()))\n",
     "    objvals.append(objval)\n",
     "    conviols.append(sum(model.calViolation()))\n",
     "    elapseds.append(tock - tick)\n",
@@ -305,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "2ec0072d-675a-4430-ac06-07936115a28d",
    "metadata": {},
    "outputs": [],
@@ -321,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ea14d3a4-62f7-409b-874e-c9c58e0322a8",
    "metadata": {
     "scrolled": true
@@ -453,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "04b034b7-d404-4e6d-aa6f-11ae008ef1d2",
    "metadata": {},
    "outputs": [
@@ -461,7 +604,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 203.69it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 244.23it/s]\n"
      ]
     },
     {
@@ -470,13 +613,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    201.908000          8.299482      0.004387\n",
-      "std      68.289846          2.787089      0.001136\n",
-      "min      47.000000          2.687708      0.002504\n",
-      "25%     153.000000          6.265262      0.003524\n",
-      "50%     194.000000          8.012799      0.004063\n",
-      "75%     247.000000         10.265262      0.005000\n",
-      "max     471.000000         18.542614      0.008723\n"
+      "mean    201.908000          8.299482      0.003719\n",
+      "std      68.289846          2.787089      0.000713\n",
+      "min      47.000000          2.687708      0.001998\n",
+      "25%     153.000000          6.265262      0.003005\n",
+      "50%     194.000000          8.012799      0.003566\n",
+      "75%     247.000000         10.265262      0.004008\n",
+      "max     471.000000         18.542614      0.006730\n"
      ]
     }
    ],
@@ -511,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "545cae68-65b7-4d0d-b87d-f021dfb0a2a4",
    "metadata": {},
    "outputs": [],
@@ -527,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "18744735-a740-489c-bd05-49988544dfac",
    "metadata": {
     "scrolled": true
@@ -729,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "234958b5-a9bd-4a1a-b56a-edd8f2cbd6f2",
    "metadata": {},
    "outputs": [
@@ -737,7 +880,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 173.56it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 247.56it/s]\n"
      ]
     },
     {
@@ -746,13 +889,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    207.073000          8.717267      0.005161\n",
-      "std      73.458327          3.018748      0.001550\n",
-      "min      40.000000          2.650724      0.002504\n",
-      "25%     156.000000          6.302247      0.004005\n",
-      "50%     198.000000          8.302247      0.004644\n",
-      "75%     255.000000         10.542614      0.006030\n",
-      "max     500.000000         20.109414      0.013819\n"
+      "mean    207.073000          8.717267      0.003673\n",
+      "std      73.458327          3.018748      0.000776\n",
+      "min      40.000000          2.650724      0.002000\n",
+      "25%     156.000000          6.302247      0.003000\n",
+      "50%     198.000000          8.302247      0.003513\n",
+      "75%     255.000000         10.542614      0.004004\n",
+      "max     500.000000         20.109414      0.008041\n"
      ]
     }
    ],
@@ -787,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "64737e09-1735-4893-a0d6-c8ca73a91fc6",
    "metadata": {},
    "outputs": [],
@@ -803,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "8b39c4a7-2b21-4384-9d85-2e479ce85965",
    "metadata": {
     "scrolled": true
@@ -935,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "a1efad3d-dd09-4aef-81dd-3ed3c31ffb31",
    "metadata": {
     "scrolled": true
@@ -1149,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "7858c207-11d3-4cfc-8e7a-13d831ee7c1c",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 194.31it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 225.18it/s]\n"
      ]
     },
     {
@@ -1166,13 +1309,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    189.095000          9.041808      0.004626\n",
-      "std      72.065911          2.930551      0.001192\n",
-      "min      27.000000          2.735447      0.002506\n",
-      "25%     136.000000          6.887273      0.003855\n",
-      "50%     183.500000          8.585647      0.004302\n",
-      "75%     234.000000         10.841309      0.005317\n",
-      "max     443.000000         18.579599      0.008569\n"
+      "mean    189.095000          9.041808      0.004032\n",
+      "std      72.065911          2.930551      0.001178\n",
+      "min      27.000000          2.735447      0.002000\n",
+      "25%     136.000000          6.887273      0.003006\n",
+      "50%     183.500000          8.585647      0.003654\n",
+      "75%     234.000000         10.841309      0.004505\n",
+      "max     443.000000         18.579599      0.008510\n"
      ]
     }
    ],
@@ -1207,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "ddfd3db5-b61c-46dc-92ae-138ce002fc11",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "e9397410-cf75-46de-83b9-d975605b2022",
    "metadata": {},
    "outputs": [],
@@ -1236,17 +1379,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "0fa694d4-0308-42af-a65a-34e314bcfbe4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# parameters\n",
-    "p = nm.constraint.variable(\"p\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 26,
    "id": "2903e087-27af-4738-b1f5-3c30d717ba17",
    "metadata": {},
@@ -1254,7 +1386,7 @@
    "source": [
     "from model import feasibilityPumpModel\n",
     "# feasibility pump model\n",
-    "problem_rel, problem_fp = feasibilityPumpModel([p], getProb, sol_func, rnd_layer, int_ind=model.intInd, num_iters=3)"
+    "problem_rel, problem_fp = feasibilityPumpModel([\"p\"], getProb, sol_func, rnd_layer, int_ind=model.intInd, num_iters=3)"
    ]
   },
   {
@@ -1547,7 +1679,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████| 1000/1000 [00:05<00:00, 177.13it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 240.98it/s]\n"
      ]
     },
     {
@@ -1556,13 +1688,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    207.073000          8.717267      0.004992\n",
-      "std      73.458327          3.018748      0.001235\n",
-      "min      40.000000          2.650724      0.002505\n",
-      "25%     156.000000          6.302247      0.004062\n",
-      "50%     198.000000          8.302247      0.004704\n",
-      "75%     255.000000         10.542614      0.005554\n",
-      "max     500.000000         20.109414      0.010787\n"
+      "mean    207.073000          8.717267      0.003737\n",
+      "std      73.458327          3.018748      0.000695\n",
+      "min      40.000000          2.650724      0.002000\n",
+      "25%     156.000000          6.302247      0.003004\n",
+      "50%     198.000000          8.302247      0.003524\n",
+      "75%     255.000000         10.542614      0.004006\n",
+      "max     500.000000         20.109414      0.006516\n"
      ]
     }
    ],
