--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x15fc0d69310>"
+       "<torch._C.Generator at 0x12e2c209330>"
       ]
      },
      "execution_count": 1,
@@ -185,7 +185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:25<00:00, 11.69it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:24<00:00, 11.85it/s]\n"
      ]
     },
     {
@@ -194,13 +194,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    200.432000          3.835546      0.084875\n",
-      "std      78.224654          5.574005      0.033661\n",
-      "min      36.000000          0.000000      0.058178\n",
-      "25%     149.000000          0.000000      0.073848\n",
-      "50%     190.000000          0.000000      0.075489\n",
-      "75%     247.000000          8.126751      0.077108\n",
-      "max     511.000000         25.352531      0.226458\n"
+      "mean    200.432000          3.835546      0.083735\n",
+      "std      78.224654          5.574005      0.034054\n",
+      "min      36.000000          0.000000      0.057559\n",
+      "25%     149.000000          0.000000      0.061650\n",
+      "50%     190.000000          0.000000      0.075394\n",
+      "75%     247.000000          8.126751      0.076709\n",
+      "max     511.000000         25.352531      0.228122\n"
      ]
     }
    ],
@@ -259,35 +259,35 @@
        "      <td>[-1.0, 8.0, -1.0, 8.0, 2.0]</td>\n",
        "      <td>134.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.226458</td>\n",
+       "      <td>0.117057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[-3.0, 7.0, 0.0, 8.0, 1.0]</td>\n",
        "      <td>123.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.075828</td>\n",
+       "      <td>0.074816</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[-6.0, 8.0, 1.0, 10.0, 4.0]</td>\n",
        "      <td>217.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.075393</td>\n",
+       "      <td>0.076735</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[-2.0, 12.0, 1.0, 9.0, 6.0]</td>\n",
        "      <td>266.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.075831</td>\n",
+       "      <td>0.075107</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[-3.0, 7.0, -3.0, 8.0, -1.0]</td>\n",
        "      <td>132.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.076019</td>\n",
+       "      <td>0.075651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -301,35 +301,35 @@
        "      <td>[-6.0, 11.0, -2.0, 13.0, 3.0]</td>\n",
        "      <td>339.0</td>\n",
        "      <td>17.149001</td>\n",
-       "      <td>0.089267</td>\n",
+       "      <td>0.060144</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>996</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.075917</td>\n",
+       "      <td>0.077659</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>997</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>5.488008</td>\n",
-       "      <td>0.061418</td>\n",
+       "      <td>0.074160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>998</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>9.041870</td>\n",
-       "      <td>0.061603</td>\n",
+       "      <td>0.062052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>999</th>\n",
        "      <td>[-1.0, 11.0, 1.0, 9.0, 4.0]</td>\n",
        "      <td>220.0</td>\n",
        "      <td>4.928075</td>\n",
-       "      <td>0.061317</td>\n",
+       "      <td>0.181166</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -338,17 +338,17 @@
       ],
       "text/plain": [
        "                               Sol  Obj Val  Constraints Viol  Elapsed Time\n",
-       "0      [-1.0, 8.0, -1.0, 8.0, 2.0]    134.0          0.000000      0.226458\n",
-       "1       [-3.0, 7.0, 0.0, 8.0, 1.0]    123.0          0.000000      0.075828\n",
-       "2      [-6.0, 8.0, 1.0, 10.0, 4.0]    217.0          0.000000      0.075393\n",
-       "3      [-2.0, 12.0, 1.0, 9.0, 6.0]    266.0          0.000000      0.075831\n",
-       "4     [-3.0, 7.0, -3.0, 8.0, -1.0]    132.0          0.000000      0.076019\n",
+       "0      [-1.0, 8.0, -1.0, 8.0, 2.0]    134.0          0.000000      0.117057\n",
+       "1       [-3.0, 7.0, 0.0, 8.0, 1.0]    123.0          0.000000      0.074816\n",
+       "2      [-6.0, 8.0, 1.0, 10.0, 4.0]    217.0          0.000000      0.076735\n",
+       "3      [-2.0, 12.0, 1.0, 9.0, 6.0]    266.0          0.000000      0.075107\n",
+       "4     [-3.0, 7.0, -3.0, 8.0, -1.0]    132.0          0.000000      0.075651\n",
        "..                             ...      ...               ...           ...\n",
-       "995  [-6.0, 11.0, -2.0, 13.0, 3.0]    339.0         17.149001      0.089267\n",
-       "996    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          0.000000      0.075917\n",
-       "997    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          5.488008      0.061418\n",
-       "998    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          9.041870      0.061603\n",
-       "999    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          4.928075      0.061317\n",
+       "995  [-6.0, 11.0, -2.0, 13.0, 3.0]    339.0         17.149001      0.060144\n",
+       "996    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          0.000000      0.077659\n",
+       "997    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          5.488008      0.074160\n",
+       "998    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          9.041870      0.062052\n",
+       "999    [-1.0, 11.0, 1.0, 9.0, 4.0]    220.0          4.928075      0.181166\n",
        "\n",
        "[1000 rows x 4 columns]"
       ]
@@ -401,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:59<00:00,  8.38it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:02<00:00,  8.15it/s]\n"
      ]
     },
     {
@@ -410,13 +410,13 @@
      "text": [
       "          Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.00000       1000.000000   1000.000000\n",
-      "mean    179.96800         28.608444      0.118482\n",
-      "std      76.37923          7.851483      0.042934\n",
-      "min      26.00000         10.634741      0.057399\n",
-      "25%     130.00000         21.912093      0.089160\n",
-      "50%     170.00000         27.912093      0.120978\n",
-      "75%     222.00000         33.912093      0.134076\n",
-      "max     471.00000         53.912093      0.258577\n"
+      "mean    179.96800         28.608444      0.121861\n",
+      "std      76.37923          7.851483      0.044695\n",
+      "min      26.00000         10.634741      0.058464\n",
+      "25%     130.00000         21.912093      0.091372\n",
+      "50%     170.00000         27.912093      0.121078\n",
+      "75%     222.00000         33.912093      0.135634\n",
+      "max     471.00000         53.912093      0.290110\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 244.23it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 234.12it/s]\n"
      ]
     },
     {
@@ -613,13 +613,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    201.908000          8.299482      0.003719\n",
-      "std      68.289846          2.787089      0.000713\n",
-      "min      47.000000          2.687708      0.001998\n",
-      "25%     153.000000          6.265262      0.003005\n",
-      "50%     194.000000          8.012799      0.003566\n",
-      "75%     247.000000         10.265262      0.004008\n",
-      "max     471.000000         18.542614      0.006730\n"
+      "mean    201.908000          8.299482      0.003886\n",
+      "std      68.289846          2.787089      0.000768\n",
+      "min      47.000000          2.687708      0.002000\n",
+      "25%     153.000000          6.265262      0.003503\n",
+      "50%     194.000000          8.012799      0.003974\n",
+      "75%     247.000000         10.265262      0.004235\n",
+      "max     471.000000         18.542614      0.007208\n"
      ]
     }
    ],
@@ -880,7 +880,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 247.56it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 213.29it/s]\n"
      ]
     },
     {
@@ -889,13 +889,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    207.073000          8.717267      0.003673\n",
-      "std      73.458327          3.018748      0.000776\n",
+      "mean    207.073000          8.717267      0.004213\n",
+      "std      73.458327          3.018748      0.001014\n",
       "min      40.000000          2.650724      0.002000\n",
-      "25%     156.000000          6.302247      0.003000\n",
-      "50%     198.000000          8.302247      0.003513\n",
-      "75%     255.000000         10.542614      0.004004\n",
-      "max     500.000000         20.109414      0.008041\n"
+      "25%     156.000000          6.302247      0.003510\n",
+      "50%     198.000000          8.302247      0.004001\n",
+      "75%     255.000000         10.542614      0.004998\n",
+      "max     500.000000         20.109414      0.007771\n"
      ]
     }
    ],
@@ -1300,7 +1300,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 225.18it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 229.03it/s]\n"
      ]
     },
     {
@@ -1309,13 +1309,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    189.095000          9.041808      0.004032\n",
-      "std      72.065911          2.930551      0.001178\n",
-      "min      27.000000          2.735447      0.002000\n",
-      "25%     136.000000          6.887273      0.003006\n",
-      "50%     183.500000          8.585647      0.003654\n",
-      "75%     234.000000         10.841309      0.004505\n",
-      "max     443.000000         18.579599      0.008510\n"
+      "mean    189.095000          9.041808      0.003920\n",
+      "std      72.065911          2.930551      0.000862\n",
+      "min      27.000000          2.735447      0.001999\n",
+      "25%     136.000000          6.887273      0.003317\n",
+      "50%     183.500000          8.585647      0.003999\n",
+      "75%     234.000000         10.841309      0.004416\n",
+      "max     443.000000         18.579599      0.008525\n"
      ]
     }
    ],
@@ -1359,7 +1359,7 @@
     "# define neural architecture for the solution mapping\n",
     "sol_func = nm.modules.blocks.MLP(insize=num_vars, outsize=num_vars, bias=True,\n",
     "                                 linear_map=nm.slim.maps[\"linear\"], nonlin=nn.ReLU,\n",
-    "                                hsizes=[80]*4)\n",
+    "                                 hsizes=[80]*4)\n",
     "# define neural architecture for rounding\n",
     "rnd_layer = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)"
    ]
@@ -1679,7 +1679,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 240.98it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:04<00:00, 218.08it/s]\n"
      ]
     },
     {
@@ -1688,13 +1688,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    207.073000          8.717267      0.003737\n",
-      "std      73.458327          3.018748      0.000695\n",
+      "mean    207.073000          8.717267      0.004109\n",
+      "std      73.458327          3.018748      0.000835\n",
       "min      40.000000          2.650724      0.002000\n",
-      "25%     156.000000          6.302247      0.003004\n",
-      "50%     198.000000          8.302247      0.003524\n",
-      "75%     255.000000         10.542614      0.004006\n",
-      "max     500.000000         20.109414      0.006516\n"
+      "25%     156.000000          6.302247      0.003512\n",
+      "50%     198.000000          8.302247      0.004004\n",
+      "75%     255.000000         10.542614      0.004564\n",
+      "max     500.000000         20.109414      0.007529\n"
      ]
     }
    ],
