Rename: int_ind

--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -458,7 +458,7 @@
     "# round x\n",
     "layers_rnd = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)\n",
     "round_func = roundModel(layers=layers_rnd, param_keys=[\"p\"], var_keys=[\"x_bar\"], output_keys=[\"x_rnd\"],\n",
-    "                        int_ind={\"x_bar\":model.intInd}, name=\"round\")\n",
+    "                        int_ind={\"x_bar\":model.int_ind}, name=\"round\")\n",
     "_, problem = getNMProb(round_func)"
    ]
   },
@@ -664,7 +664,7 @@
     "# round x\n",
     "layers_rnd = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)\n",
     "round_func = roundThresholdModel(layers=layers_rnd, param_keys=[\"p\"], var_keys=[\"x_bar\"], output_keys=[\"x_rnd\"],\n",
-    "                                 int_ind={\"x_bar\":model.intInd}, name=\"round\")\n",
+    "                                 int_ind={\"x_bar\":model.int_ind}, name=\"round\")\n",
     "_, problem = getNMProb(round_func)"
    ]
   },
@@ -940,7 +940,7 @@
     "# round x\n",
     "layers_rnd = netFC(input_dim=num_vars*2, hidden_dims=[80]*4, output_dim=num_vars)\n",
     "round_func = roundModel(layers=layers_rnd, param_keys=[\"p\"], var_keys=[\"x_bar\"], output_keys=[\"x_rnd\"],\n",
-    "                        int_ind={\"x_bar\":model.intInd}, name=\"round\")\n",
+    "                        int_ind={\"x_bar\":model.int_ind}, name=\"round\")\n",
     "problem_rel, problem_rnd = getNMProb(round_func)"
    ]
   },
@@ -1386,7 +1386,7 @@
    "source": [
     "from model import feasibilityPumpModel\n",
     "# feasibility pump model\n",
-    "problem_rel, problem_fp = feasibilityPumpModel([\"p\"], getProb, sol_func, rnd_layer, int_ind=model.intInd, num_iters=3)"
+    "problem_rel, problem_fp = feasibilityPumpModel([\"p\"], getProb, sol_func, rnd_layer, int_ind=model.int_ind, num_iters=3)"
    ]
   },
   {
